Prevent text overflow

--- a/src/components/badge/theme.css
+++ b/src/components/badge/theme.css
@@ -18,6 +18,7 @@
   position: relative;
   text-decoration: none;
   transition: background-color var(--animation-duration) var(--animation-curve-fast-out-slow-in);
+  max-width: 100%;
 
   svg {
     -ms-transform: translateY(-1px);
@@ -33,6 +34,8 @@
   }
 
   .label {
+    overflow: hidden;
+    text-overflow: ellipsis;
     white-space: nowrap;
   }
 
